# ezcasino

./: Cargo.toml  Dockerfile.server  README.md  config.toml  package.json
.github/workflows/: docker.yml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/blackjack/: Cargo.toml  README.md  blackjack.img  blackjack.txt
contracts/blackjack/contract/: Cargo.toml
contracts/blackjack/contract/src/: client.rs  lib.rs
contracts/blackjack/examples/: host.rs
contracts/blackjack/host/: Cargo.toml
contracts/blackjack/host/src/: main.rs
contracts/blackjack/methods/: build.rs
contracts/blackjack/methods/guest/: Cargo.toml  guest.img  guest.txt
contracts/blackjack/methods/guest/src/: main.rs
contracts/blackjack/src/: client.rs  lib.rs  main.rs
contracts/blackjack/src/client/: tx_executor_handler.rs
contracts/session-key-manager/: Cargo.toml  session-key-manager.img  session-key-manager.txt
contracts/session-key-manager/examples/: host.rs
contracts/session-key-manager/src/: lib.rs  main.rs
contracts/session-key-manager/src/client/: tx_executor_handler.rs
contracts/session_key_manager/contract/: Cargo.toml
contracts/session_key_manager/contract/src/: client.rs  lib.rs
contracts/session_key_manager/host/: Cargo.toml
contracts/session_key_manager/host/src/: main.rs
contracts/session_key_manager/methods/: Cargo.toml
contracts/session_key_manager/methods/session_key_manager_guest/: Cargo.toml  session_key_manager_guest.img  session_key_manager_guest.txt
contracts/session_key_manager/methods/session_key_manager_guest/src/: main.rs
front/: .env  .env.production  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
front/scripts/: generate-popup-sound.js
front/src/: App.css  App.tsx  Game.tsx  index.css  main.tsx
front/src/components/: AdManager.tsx  AdPopup.css  AdPopup.tsx  Card.tsx  Cow.tsx  DesktopShortcut.css  DesktopShortcut.tsx  Game.tsx  MsnChat.css  MsnChat.tsx  Onboarding.css  Onboarding.tsx  OnboardingStep.tsx  SignUpWindow.css  SignUpWindow.tsx  TransactionNotification.tsx  TutorialGame.css  TutorialGame.tsx  VisualEffects.css  VisualEffects.tsx  WeatherWidget.css  WeatherWidget.tsx  WindowsLoader.tsx
front/src/components/BigRedButton/: BigRedButton.css  BigRedButton.tsx  index.ts
front/src/components/Hyli/: Hyli.css  Hyli.tsx  index.ts
front/src/contexts/: OnboardingContext.tsx
front/src/services/: authService.ts  gameService.ts  nodeService.ts
front/src/styles/: Game.css  TransactionNotification.css  WindowsLoader.css
front/src/types/: faucet.ts  game.ts
server/: Cargo.toml
server/src/: app.rs  conf.rs  conf_defaults.toml  init.rs  main.rs  prover.rs  utils.rs
src/: App.tsx  index.css
src/components/: Game.tsx  VisualEffects.css  VisualEffects.tsx
