[workspace]
resolver = "2"
members = [
  "contracts/blackjack/host",
  "contracts/blackjack/contract",
  "contracts/blackjack/methods",
  "server",
]

[workspace.dependencies]
# don't forget to update methods/guest/Cargo.toml 
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyle-org/hyle", default-features = false, package = "hyle-client-sdk", branch = "main" }
hyle = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle", branch = "main" }
hyle_hyllar = { git = "https://github.com/Hyle-org/hyle.git", package = "hyle-hyllar", branch = "main" }

contract = { path = "contracts/blackjack/contract", package = "contract" }

[workspace.package]
version = "0.4.1"
edition = "2021"
homepage = "https://hyle.eu/"
repository = "https://github.com/Hyle-org/ezcasino/"
# licence = ""
