[workspace]
resolver = "2"
members = ["contracts", "contracts/blackjack", "server"]

[workspace.dependencies]
# don't forget to update methods/guest/Cargo.toml 
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyle-org/hyle", default-features = false, package = "hyle-client-sdk", branch = "main" }
hyle_modules = { git = "https://github.com/hyle-org/hyle", package = "hyle-modules", branch = "main" }
hyle-smt-token = { git = "https://github.com/Hyle-org/hyle.git", branch = "main", default-features = false, package = "hyle-smt-token" }

contracts = { path = "contracts", default-features = false, package = "contracts" }
blackjack = { path = "contracts/blackjack", package = "blackjack" }

[workspace.package]
version = "0.4.1"
edition = "2021"
homepage = "https://hyle.eu/"
repository = "https://github.com/Hyle-org/ezcasino/"
# licence = ""
