[package]
name = "contracts"
edition = { workspace = true }

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }
blackjack = { workspace = true, features = ["client"] }

[build-dependencies]
risc0-build = { version = "2.1.0", optional = true }

[package.metadata.risc0]
methods = ["blackjack"]

[features]
build = ["dep:risc0-build"]
nonreproducible = ["build", "all"]

# Following features are used to choose which contracts should be rebuild with docker
all = ["blackjack"]
blackjack = []
