[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
hyle_hyllar = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
borsh = { version = "1.5.7" }
rand = { version = "0.9.0", default-features = false }
rand_seeder = { version = "0.4.0", default-features = false }

[features]
default = []
client = []
