[package]
name = "session_key_manager_host"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
contract = { path = "../contract", package = "session_key_manager_contract" }

methods = { path = "../methods", package = "session_key_manager_methods" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.23", features = ["derive"] }
borsh = "1.5.5"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
rand = "0.9.0"
