[package]
name = "session_key_manager_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = [
  "risc0",
], tag = "secp256k1.0.2.0" }
contract = { path = "../../contract", package = "session_key_manager_contract" }

risc0-zkvm = { version = "1.2.5", default-features = false, features = ['std'] }
