[package]
name = "session_key_manager_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = [
  "risc0",
] }
contract = { path = "../../contract", package = "session_key_manager_contract" }

risc0-zkvm = { version = "2.0.0", default-features = false, features = ['std'] }
